--- a/ueventd.rc
+++ b/ueventd.rc
@@ -17,8 +17,11 @@ subsystem adf
 # group, then they'll only see log entries for their UID.
 /dev/log/*                0666   root       log
 
-# the msm hw3d client device node is world writable/readable.
+# the msm hw3d client device node is world writable/readable
 /dev/msm_hw3dc            0666   root       root
+
+# the DIAG device node is not world writable/readable.
+/dev/diag                 0660   system     qcom_diag
 
 # gpu driver for adreno200 is globally accessible
 /dev/kgsl                 0666   root       root
@@ -27,7 +30,6 @@ subsystem adf
 /dev/dri/*                0666   root       graphics
 
 # these should not be world writable
-/dev/diag                 0660   system     qcom_diag
 /dev/diag_arm9            0660   radio      radio
 /dev/android_adb          0660   adb        adb
 /dev/android_adb_enable   0660   adb        adb
@@ -82,36 +84,10 @@ subsystem adf
 /dev/mtp_usb              0660   root       mtp
 /dev/usb_accessory        0660   root       usb
 /dev/tun                  0660   system     vpn
-#last test
-#/dev/url                  0660   secnetfilter    secnetfilter
 
 # CDMA radio interface MUX
 /dev/ts0710mux*           0640   radio      radio
 /dev/ppp                  0660   radio      vpn
-
-#JPN FeliCa
-/dev/felica               0660    mfc   system
-/dev/felica_pon           0660    mfc   system
-/dev/felica_cen           0660    mfc   felicalock
-/dev/felica_rfs           0440    mfc   system
-/dev/felica_rws           0660    mfc   system
-/dev/felica_ant           0660    mfc   system
-/dev/felica_int_poll      0400    mfc   system
-/dev/felica_uid           0220    mfc   system
-/dev/felica_uicc          0660    mfc   system
-
-#JPN NFC
-/dev/ttyHSL2              0660    nfc   nfc
-/dev/snfc_uart            0660    nfc   nfc
-/dev/snfc_pon             0220    nfc   nfc
-/dev/snfc_cen             0440    nfc   system
-/dev/snfc_hsel            0660    nfc   nfc
-/dev/snfc_intu_poll       0440    nfc   nfc
-/dev/snfc_available_poll  0440    nfc   nfc
-/dev/snfc_rfs             0440    nfc   nfc
-/dev/snfc_rfs_poll        0440    nfc   nfc
-/dev/uartcc               0660    nfc   nfc
-
 
 # sysfs properties
 /sys/devices/virtual/input/input*   enable      0660  root   input
